# TerraGuard

./: .gitignore  Dockerfile  README.md  aws_data_sources.json  aws_ephemeral.json  aws_resource_names.txt  aws_subcategories.txt  benchmark_results.json  checkov_script.sh  compliance_test_results_20250325_014819.json  compliance_test_results_20250325_022926.json  compliance_test_results_20250325_024126.json  main.py  pyproject.toml  requirements.txt
app/: api_keys.py  benchmark_runner.py  benchmarking.py  checkov_validator.py  chroma_store.py  embeddings.py  error_summarizer.py  llm_benchmarking.py  models.py  ollama.py  playground.ipynb  prompt_loader.py  prompt_template.py  rag.py  rag_pipeline.py  rag_prompts.py  schemas.py  scrape.py  scrape_aws_tf.py  validate_tf.py  vector_store.py
benchmarking_results/: mistral-large-latest_0.1_PromptingStrategy.CHAIN_OF_THOUGHT.json  mistral-large-latest_0.1_PromptingStrategy.FEW_SHOT.json  mistral-large-latest_0.1_PromptingStrategy.RAG.json  mistral-large-latest_0.1_PromptingStrategy.ZERO_SHOT.json  mistral-large-latest_0.7_PromptingStrategy.CHAIN_OF_THOUGHT.json  mistral-large-latest_0.7_PromptingStrategy.FEW_SHOT.json  mistral-large-latest_0.7_PromptingStrategy.RAG.json  mistral-large-latest_0.7_PromptingStrategy.ZERO_SHOT.json
checkov_output/: cot_3.txt  cot_5.txt  cot_6.txt  few_shot_1.txt  few_shot_3.txt  few_shot_4.txt  validation_20250325_030112_5365_20250325_030129.json  validation_20250412_175055_8914_20250412_175126.json  validation_20250415_125026_5078_20250415_125054.json  validation_20250415_133446_884_20250415_133514.json  (+88 more)
checkov_output copy/: cot_1.txt  cot_2.txt  cot_4.txt  few_shot_2.txt  few_shot_5.txt  few_shot_6.txt  zero_shot_4.txt  zero_shot_5.txt
(+59 files in other folders)
