[project]
name = "terraguard"
version = "0.1.0"
description = ""
authors = [
    {name = "karkidilochan",email = "karkidilochan.dk@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "datasets (>=3.3.2,<4.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "google-genai (>=1.3.0,<2.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
